# edifactlib

./: .gitignore  README.md  pyproject.toml
src/edifactlib/cli/: cli.py  loader.py  main.py  renderer.py  version.py
src/edifactlib/core/: __init__.py  catalog.py
src/edifactlib/core/directory/: directory.py
src/edifactlib/core/directory/directories/: D.21A.json  D.22B.json
src/edifactlib/core/exceptions/: __init__.py  catalog_error.py  charset_validation_error.py  data_element_validation_error.py  edifact_error.py  interchange_validation_error.py  message_validation_error.py  parsing_error.py  segment_validation_error.py
src/edifactlib/core/models/interchange/: __init__.py  component.py  data_element.py  functional_group.py  interchange.py  (+2 more)
src/edifactlib/core/parser/: base_parser.py  parser.py
src/edifactlib/core/resolver/: __init__.py  data_element_resolver.py  interchange_resolver.py  message_resolver.py  segment_resolver.py
src/edifactlib/core/syntax/: syntax.py
src/edifactlib/core/validator/: __init__.py  charset.py  charset_level.py  component_validator.py  data_element_validator.py  interchange_validator.py  message_validator.py  segment_validator.py
tests/: conftest.py
tests/core/: test_base_parser.py  test_catalog.py  test_parser.py
tests/core/resolver/: test_data_element_resolver.py  test_interchange_resolver.py  test_message_resolver.py  test_segment_resolver.py
tests/core/validator/: test_component_validator.py  test_data_element_validator.py  test_interchange_validator.py  test_message_validator.py  test_segment_validator.py
(+7 files in other folders)
