[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "edifactlib"
version = "0.2.0"
readme = "README.md"
dependencies = [
  "pydantic",
  "typer",
  "rich"
]
requires-python = ">=3.12"

[project.urls]
source = "https://github.com/treffinger/edifactlib"

[tool.hatch.build.targets.wheel]
packages = ["src/edifactlib"]

[project.scripts]
edifact = "edifactlib.cli.main:app"
