[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "edifactlib"
version = "0.3.0"
description = "A Python library and CLI tool for parsing, validating, and displaying UN/EDIFACT interchanges."
license = "AGPL-3.0-only"
readme = "README.md"
dependencies = [
  "pydantic",
  "typer",
  "rich"
]
requires-python = ">=3.12"

[project.urls]
source = "https://github.com/treffinger/edifactlib"

[tool.hatch.build.targets.wheel]
packages = ["src/edifactlib"]

[project.scripts]
edifact = "edifactlib.cli.main:app"
